# playground

./: .gitmodules  README.md  compiler.cpp  compiler.h
algo_binomial_heap/: main.cpp  problem.md
algo_rb_tree/: README.md  main.cpp
circular-buffer/: README.md  circular_buffer.h  circular_buffer_test.cpp
compiler-at-home/: Makefile  README.md  eval-expression.c  test_simple.c
custom_os/: .clangd  .devcontainer.json  .dockerignore  .gitignore  .grader-ci.yml  LICENSE  Makefile  README.md  TECHGUIDE.md  bochsrc  config.yaml  config_values.yaml  defs.h  grade.py  grub.cfg  linker.h  linker.ld  requirements.txt  setup-deps.sh
custom_os/arch/: Makefile
custom_os/arch/x86/: Makefile  asm_defs.h  early.S  early.cpp  exc_asm.h  exc_entry.S  exc_entry.cpp  exc_entry.h  fault.cpp  gdt.h  gdt_asm.h  init.cpp  lapic.cpp  lapic.h  msr.h  multiboot.S  per_cpu.h  per_cpu_asm.h  regs_asm.h  rtc.cpp  rtc.h  serial.cpp  serial.h  signal.cpp  stack_unwind.cpp  syscall.S  thread.S  thread.cpp  user.S  vga.cpp  vga.h  x86.h
custom_os/arch/x86/arch/: irq.h  ptr.h  regs.h  signal.h  stack_unwind.h  thread.h  time.h  user.h
custom_os/cxx/: cassert
custom_os/debug/: bdev.py  gdb_utils.py
custom_os/docker/: base.docker  dev.docker  grader.docker
custom_os/drivers/: Makefile  acpi.cpp  acpi.h  ata.cpp  ata.h  hpet.cpp  hpet.h  ioapic.cpp  ioapic.h  pci.cpp  pci.h
custom_os/fs/: Makefile  block_device.cpp  block_device.h  buffer.cpp  buffer.h  ext2.cpp  ext2.h  ext2_common.cpp  file_table.cpp  file_table.h  inode.cpp  inode.h  page_cache.cpp  page_cache.h  pipe.cpp  pipe.h  vfs.cpp  vfs.h  writeback.cpp  writeback.h
custom_os/kernel/: Makefile  clone.cpp  clone.h  elf.h  error.h  exec.cpp  exec.h  irq.cpp  irq.h  kernel_thread.cpp  kernel_thread.h  ksyms.cpp  ksyms.h  main.cpp  multiboot.cpp  multiboot.h  multiboot_common.cpp  panic.cpp  panic.h  per_cpu.cpp  per_cpu.h  printk.cpp  printk.h  sched.cpp  sched.h  signal.cpp  signal.h  syscall.cpp  syscall.h  time.cpp  time.h  vsyscall.cpp  vsyscall.h  wait.cpp  wait.h
custom_os/labs/: 00-intro.md  01-io.md  03-page-allocator.md  04-slab-allocator.md  05-pipes.md  06-signal-dilevery.md  07-fpu-context.md
custom_os/lib/: Makefile  atomic.h  common.h  defer.h  flags.h  function_traits.h  hash.h  list.h  locking.h  memory.cpp  memory.h  murmur.h  mutex.cpp  mutex.h  seq_bitmap.cpp  seq_bitmap.h  seqlock.cpp  seqlock.h  shared_ptr.h  spinlock.h  stack_unwind.cpp  stack_unwind.h
custom_os/mm/: Makefile  config.yaml  kasan.cpp  kasan.h  kmalloc.cpp  kmalloc.h  membuf.cpp  membuf.h  new.cpp  new.h  obj_alloc.cpp  obj_alloc.h  page_alloc.cpp  page_alloc.h  page_alloc_common.cpp  paging.h  vmem.cpp  vmem.h  vmem_common.cpp
custom_os/testlib/: asserts.py  driver.py  manytask.py  testing.py
custom_os/testlib/tasks/: fpu_context.py  lapic.py  multiboot.py  page_alloc.py  pipes.py  signal_delivery.py  slab_alloc.py  wait4.py
custom_os/tests/: Makefile  common.h  config.yaml  test_lapic_timer.cpp  test_multiboot.S  test_multiboot.cpp  test_page_alloc_basic.cpp  test_page_alloc_common.cpp  test_page_alloc_common.h  test_page_alloc_fragmentation.cpp  test_slab_alloc.cpp
custom_os/uapi/: mm.h
custom_os/user/: Makefile  script.ld
custom_os/user/stdlib/: Makefile  defs.h  errno.h  fcntl.h  memory.h  printf.c  sched.c  sched.h  signal.c  signal.h  start.c  string.c  string.h  unistd.c  unistd.h
custom_os/user/stdlib/stdlib_private/: syscalls.h
custom_os/user/stdlib/sys/: mman.c  mman.h  resource.h  syscalls.h  time.h  types.h  wait.c  wait.h
custom_os/user/stdlib/uapi/: resource.h  time.h
custom_os/user/tests/: Makefile  common.h  gen_testdata.py  main.c  tests_file.c  tests_file_write.c  tests_fork_wait.c  tests_fpu.c  tests_mmap.c  tests_pipe.c  tests_signal.c  tests_wait4.c
db_postgresql_proj/: README.md
db_postgresql_proj/advanced_part/: func.sql  index.sql  trigger.sql  view.sql
db_postgresql_proj/base_part/: create_tables.sql  insert_data.sql  select.sql
db_postgresql_proj/data/: Artifact.csv  Branch.csv  Developer.csv  Job.csv  Pipeline.csv  Repository.csv  RepositoryCollaborator.csv  Runner.csv
db_postgresql_proj/schemas/: Схемы.drawio  Физика.md
fsm-pipeline/: CMakeLists.txt  README.md
fsm-pipeline/include/: dfa2min_dfa.hpp  eps_nfa2nfa.hpp  graph_types.hpp  min_dfa2regex.hpp  nfa2dfa.hpp  pipeline.hpp  regex2eps_nfa.hpp
fsm-pipeline/src/: dfa2min_dfa.cpp  eps_nfa2nfa.cpp  graph_type.cpp  main.cpp  min_dfa2regex.cpp  nfa2dfa.cpp  regex2eps_nfa.cpp
hash-map/: README.md  unordered_map.h  unordered_map_test.cpp
lr-k/: CMakeLists.txt  README.md
lr-k/include/: builder.hpp  connector.hpp  first_k.hpp  grammar.hpp  runtime_parser.hpp  utils.hpp
lr-k/src/: compiler.cpp  grammar.cpp  parser.cpp  utils.cpp
lr-k/tests/: test.hpp  test_builder.cpp  test_first.cpp  test_grammar.cpp  test_io.cpp  test_parser.cpp
lr-k/tests/data/: base_grammar.txt  broken_grammar1.txt  broken_grammar2.txt  broken_grammar3.txt  lr-0_grammar.txt  lr-2_grammar.txt  lr-3_grammar.txt  lr-6_grammar.txt  lr-6_hard_grammar.txt
project/: .gitignore  README.md  embedding_dueling_agent_nn.onnx  pyproject.toml  requirements.txt
project/saved_models/: peaceful_model_final.pth  predator_model_final.pth
project/src/ai_life_simulator/_backend/: agents.py
project/src/ai_life_simulator/_front/: assets.py  front.py  game_logic.py
project/src/ai_life_simulator/_front/cli/: main.py  temp.py
project/tests/: conftest.py  test_agents.py  test_assets.py  test_front.py  test_game_logic.py  test_main.py
shared-ptr/: problem.md  smart_pointers.h  smart_pointers_test.cpp
stackallocator-list/: problem.md  stackallocator.h
task-testing-cpp/: CMakeLists.txt
task-testing-cpp/include/: Tree.h
task-testing-cpp/src/02-tree/: Tree.cpp
task-testing-cpp/src/03-weather/: Weather.cpp
task-testing-cpp/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task-testing-cpp/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task-testing-cpp/tests/03-weather/: CMakeLists.txt  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
(+8 files in other folders)
